# PythonPoetryproj

./: .buildinfo  README.md  firstpoetryproj.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tests.html
.doctrees/: environment.pickle  firstpoetryproj.doctree  index.doctree  modules.doctree  tests.doctree
.github/workflows/: main.yml  sphinx.yml
_sources/: index.rst.txt
docs/: conf.py  firstpoetryproj.rst  modules.rst  tests.rst
firstpoetryproj/: poetry code  pythonpro.py
tests/: inc_pythonpro_test.py  test_inc_evennbr.py
