[tool.poetry]
name = "firstpoetryproj"
version = "0.1.0"
description = ""
authors = ["Gabriel WARDE <gabrielwarde2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
pylint = "^3.0.2"
sphinx = "^7.2.6"


[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^7.3.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
